Modal Overflow Fix

--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -15,7 +15,7 @@
   .modal {
     max-width: 400px;
     max-height: 80vh;
-    overflow: scroll;
+    overflow: hidden;
     width: 80vw;
     height: fit-content;
     background-color: #fff;
